# simple-soccer-py

./: pyproject.toml
simple_soccer_py/: models.py
simple_soccer_py/common/: c2d_matrix.py  moving_entity.py  telegram.py  utils.py  wall2d.py
tests/: test_models.py
tests/common/: test_vector2d.py
