[tool.poetry]
name = "simple-soccer-py"
version = "0.0.1"
description = ""
authors = ["tanzhijian <tanzhijianorg@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
mypy = "^1.8.0"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = ["E", "F", "I"]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests",]
